fix about me page too narrow

--- a/styles/style_about.css
+++ b/styles/style_about.css
@@ -63,3 +63,15 @@
     list-style-position: inside;
 
 }
+
+@media only screen and (max-width: 768px) {
+    #about .page_visible {
+        padding-top: 20px;
+    }
+    
+    #faqs {
+        width: 100%;
+        padding: 15px;
+    }
+    
+}
